--- a/hi.html
+++ b/hi.html
@@ -1,6 +1,6 @@
-<div>Hi</div>
-<div>Hi</div>
-<div>Hi</div>
+<div>hi</div>
+<div>hi</div>
+<div>hi</div>
 <div>leftbottom-newbranch-changes-push</div>
 <div>new changes</div>
 <div>git delete branch in cmd palette</div>
